# exercises

./: default-function-parameter.cpp
DebugStackPrinter/: MSP.cpp  MSP.h
socket/: CMakeLists.txt  Client.cpp  Server.cpp  client.c  makefile  server.c
socket/IPC/: CMakeLists.txt  IPCBase.cpp  IPCBase.h  IPCClient.cpp  IPCClient.h  IPCServer.cpp  IPCServer.h
